--- a/index.html
+++ b/index.html
@@ -17,166 +17,187 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-text">Studio</span></a
-        >
-
-        <ul>
-          <li><a href="./index.html" class="header-link">Studio</a></li>
-          <li><a href="" class="header-link">Portfolio</a></li>
-          <li><a href="" class="header-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="header-contacts"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="header-contacts"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo header-logo"
+            >Web<span class="logo-text">Studio</span></a
+          >
+          <ul class="header-list">
+            <li class="header-list-item">
+              <a href="./index.html" class="header-link">Studio</a>
+            </li>
+            <li class="header-list-item">
+              <a href="" class="header-link">Portfolio</a>
+            </li>
+            <li class="header-list-item">
+              <a href="" class="header-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="header-contacts-list">
+            <li class="header-contacts-list-item">
+              <a href="mailto:info@devstudio.com" class="header-contacts"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-contacts-list-item">
+              <a href="tel:+110001111111" class="header-contacts"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
-      <section class="hero">
-        <h1 class="title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+      <section class="hero section">
+        <div class="container hero-container">
+          <h1 class="title">Effective Solutions for Your Business</h1>
+          <button type="button" class="button">Order Service</button>
+        </div>
       </section>
 
-      <section class="advantages">
-        <h2 class="advantages-title">Advantages</h2>
-        <ul>
-          <li>
-            <h3 class="advantages-title-list">Strategy</h3>
-            <p class="advantages-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-title-list">Punctuality</h3>
-            <p class="advantages-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-title-list">Diligence</h3>
-            <p class="advantages-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-title-list">Technologies</h3>
-            <p class="advantages-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="advantages section">
+        <div class="container advantages-container">
+          <h2 class="advantages-title visually-hidden">Advantages</h2>
+          <ul class="advantages-list">
+            <li class="advantages-list-item">
+              <h3 class="advantages-list-title">Strategy</h3>
+              <p class="advantages-list-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <h3 class="advantages-list-title">Punctuality</h3>
+              <p class="advantages-list-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <h3 class="advantages-list-title">Diligence</h3>
+              <p class="advantages-list-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-list-item">
+              <h3 class="advantages-list-title">Technologies</h3>
+              <p class="advantages-list-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul>
-          <li class="team-list">
-            <img src="./images/mark.jpg" alt="Mark_Guerrero" width="264" />
-            <h3 class="team-title-list">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-list">
-            <img src="./images/tom.jpg" alt="Tom_Ford" width="264" />
-            <h3 class="team-title-list">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-list">
-            <img src="./images/camila.jpg" alt="Camila_Garcia" width="264" />
-            <h3 class="team-title-list">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-list">
-            <img src="./images/daniel.jpg" alt="Daniel_Wilson" width="264" />
-            <h3 class="team-title-list">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container team-container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <img src="./images/mark.jpg" alt="Mark_Guerrero" width="264" />
+              <h3 class="team-list-item-title">Mark Guerrero</h3>
+              <p class="team-list-item-text">Product Designer</p>
+            </li>
+            <li class="team-list-item">
+              <img src="./images/tom.jpg" alt="Tom_Ford" width="264" />
+              <h3 class="team-list-item-title">Tom Ford</h3>
+              <p class="team-list-item-text">Frontend Developer</p>
+            </li>
+            <li class="team-list-item">
+              <img src="./images/camila.jpg" alt="Camila_Garcia" width="264" />
+              <h3 class="team-list-item-title">Camila Garcia</h3>
+              <p class="team-list-item-text">Marketing</p>
+            </li>
+            <li class="team-list-item">
+              <img src="./images/daniel.jpg" alt="Daniel_Wilson" width="264" />
+              <h3 class="team-list-item-title">Daniel Wilson</h3>
+              <p class="team-list-item-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- ===== SECTION 4 ===== -->
-      <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/banking-app.jpg" alt="banking-app" width="360" />
-            <h3 class="portfolio-title-list">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="cashless-payment"
-              width="360"
-            />
-            <h3 class="portfolio-title-list">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/meditation-app.jpg"
-              alt="meditation-app"
-              width="360"
-            />
-            <h3 class="portfolio-title-list">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/taxi-service.jpg"
-              alt="taxi-service"
-              width="360"
-            />
-            <h3 class="portfolio-title-list">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/screen-illustrations.jpg"
-              alt="screen-illustrations"
-              width="360"
-            />
-            <h3 class="portfolio-title-list">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/online-courses.jpg"
-              alt="online-courses"
-              width="360"
-            />
-            <h3 class="portfolio-title-list">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio section">
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
+              <img
+                src="./images/banking-app.jpg"
+                alt="banking-app"
+                width="360"
+              />
+              <h3 class="portfolio-list-item-title">Banking App</h3>
+              <p class="portfolio-list-item-text">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="cashless-payment"
+                width="360"
+              />
+              <h3 class="portfolio-list-item-title">Cashless Payment</h3>
+              <p class="portfolio-list-item-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/meditation-app.jpg"
+                alt="meditation-app"
+                width="360"
+              />
+              <h3 class="portfolio-list-item-title">Meditation App</h3>
+              <p class="portfolio-list-item-text">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/taxi-service.jpg"
+                alt="taxi-service"
+                width="360"
+              />
+              <h3 class="portfolio-list-item-title">Taxi Service</h3>
+              <p class="portfolio-list-item-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="screen-illustrations"
+                width="360"
+              />
+              <h3 class="portfolio-list-item-title">Screen Illustrations</h3>
+              <p class="portfolio-list-item-text">Design</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/online-courses.jpg"
+                alt="online-courses"
+                width="360"
+              />
+              <h3 class="portfolio-list-item-title">Online Courses</h3>
+              <p class="portfolio-list-item-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-text-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a href="./index.html" class="logo footer-logo"
+          >Web<span class="logo-text-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
