--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,700;1,700&family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Tangerine:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header class="header">
@@ -102,23 +109,31 @@
           <ul class="team-list">
             <li class="team-list-item">
               <img src="./images/mark.jpg" alt="Mark_Guerrero" width="264" />
-              <h3 class="team-list-item-title">Mark Guerrero</h3>
-              <p class="team-list-item-text">Product Designer</p>
+              <div class="container-list-team">
+                <h3 class="team-list-item-title">Mark Guerrero</h3>
+                <p class="team-list-item-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img src="./images/tom.jpg" alt="Tom_Ford" width="264" />
-              <h3 class="team-list-item-title">Tom Ford</h3>
-              <p class="team-list-item-text">Frontend Developer</p>
+              <div class="container-list-team">
+                <h3 class="team-list-item-title">Tom Ford</h3>
+                <p class="team-list-item-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img src="./images/camila.jpg" alt="Camila_Garcia" width="264" />
-              <h3 class="team-list-item-title">Camila Garcia</h3>
-              <p class="team-list-item-text">Marketing</p>
+              <div class="container-list-team">
+                <h3 class="team-list-item-title">Camila Garcia</h3>
+                <p class="team-list-item-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img src="./images/daniel.jpg" alt="Daniel_Wilson" width="264" />
-              <h3 class="team-list-item-title">Daniel Wilson</h3>
-              <p class="team-list-item-text">UI Designer</p>
+              <div class="container-list-team">
+                <h3 class="team-list-item-title">Daniel Wilson</h3>
+                <p class="team-list-item-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -135,8 +150,10 @@
                 alt="banking-app"
                 width="360"
               />
-              <h3 class="portfolio-list-item-title">Banking App</h3>
-              <p class="portfolio-list-item-text">App</p>
+              <div class="container-list-portfolio">
+                <h3 class="portfolio-list-item-title">Banking App</h3>
+                <p class="portfolio-list-item-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -144,8 +161,10 @@
                 alt="cashless-payment"
                 width="360"
               />
-              <h3 class="portfolio-list-item-title">Cashless Payment</h3>
-              <p class="portfolio-list-item-text">Marketing</p>
+              <div class="container-list-portfolio">
+                <h3 class="portfolio-list-item-title">Cashless Payment</h3>
+                <p class="portfolio-list-item-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -153,8 +172,10 @@
                 alt="meditation-app"
                 width="360"
               />
-              <h3 class="portfolio-list-item-title">Meditation App</h3>
-              <p class="portfolio-list-item-text">App</p>
+              <div class="container-list-portfolio">
+                <h3 class="portfolio-list-item-title">Meditation App</h3>
+                <p class="portfolio-list-item-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -162,8 +183,10 @@
                 alt="taxi-service"
                 width="360"
               />
-              <h3 class="portfolio-list-item-title">Taxi Service</h3>
-              <p class="portfolio-list-item-text">Marketing</p>
+              <div class="container-list-portfolio">
+                <h3 class="portfolio-list-item-title">Taxi Service</h3>
+                <p class="portfolio-list-item-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -171,8 +194,10 @@
                 alt="screen-illustrations"
                 width="360"
               />
-              <h3 class="portfolio-list-item-title">Screen Illustrations</h3>
-              <p class="portfolio-list-item-text">Design</p>
+              <div class="container-list-portfolio">
+                <h3 class="portfolio-list-item-title">Screen Illustrations</h3>
+                <p class="portfolio-list-item-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -180,8 +205,10 @@
                 alt="online-courses"
                 width="360"
               />
-              <h3 class="portfolio-list-item-title">Online Courses</h3>
-              <p class="portfolio-list-item-text">Marketing</p>
+              <div class="container-list-portfolio">
+                <h3 class="portfolio-list-item-title">Online Courses</h3>
+                <p class="portfolio-list-item-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
