--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <section class="advantages section">
         <div class="container advantages-container">
-          <h2 class="advantages-title visually-hidden">Advantages</h2>
+          <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
               <h3 class="advantages-list-title">Strategy</h3>
